crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__adding_foreign_key_constraint__test__add_column_references_lock.snap
---
source: crates/squawk_linter/src/rules/adding_foreign_key_constraint.rs
expression: "lint_errors(sql, Rule::AddingForeignKeyConstraint)"
---
error[AddingForeignKeyConstraint]: Adding a foreign key constraint requires a table scan and a `SHARE ROW EXCLUSIVE` lock on both tables, which blocks writes to each table.
  ╭▸ 
3 │ ALTER TABLE "emails" ADD COLUMN "user_id" INT REFERENCES "user" ("id");
  │                                               ━━━━━━━━━━━━━━━━━━━━━━━━
  │
  ╰ help: Add `NOT VALID` to the constraint in one transaction and then VALIDATE the constraint in a separate transaction.
