crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__adding_foreign_key_constraint__test__create_table_with_column_references.snap
---
source: crates/squawk_linter/src/rules/adding_foreign_key_constraint.rs
expression: "lint_errors(sql, Rule::AddingForeignKeyConstraint)"
---
warning[adding-foreign-key-constraint]: Adding a foreign key constraint requires a table scan and a `SHARE ROW EXCLUSIVE` lock on both tables, which blocks writes to each table.
  ╭▸ 
4 │     my_fk_id INTEGER NOT NULL REFERENCES other_table (id) ON DELETE CASCADE
  │                               ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  │
  ╰ help: Add `NOT VALID` to the constraint in one transaction and then VALIDATE the constraint in a separate transaction.
