crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__adding_foreign_key_constraint__test__create_table_with_foreign_key_constraint.snap
---
source: crates/squawk_linter/src/rules/adding_foreign_key_constraint.rs
expression: "lint_errors(sql, Rule::AddingForeignKeyConstraint)"
---
warning[adding-foreign-key-constraint]: Adding a foreign key constraint requires a table scan and a `SHARE ROW EXCLUSIVE` lock on both tables, which blocks writes to each table.
   ╭▸ 
 8 │ ┏     CONSTRAINT fk_user
 9 │ ┃         FOREIGN KEY ("user_id")
10 │ ┃         REFERENCES "user" ("id")
   │ ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
   │
   ╰ help: Add `NOT VALID` to the constraint in one transaction and then VALIDATE the constraint in a separate transaction.
